@@ -69,6 +69,7 @@ params:
    - short [optional] (string - 1 letter) short option string
    - long [optional] (string) long option string
    - type [optional] (callable) the option will be converted to this type
+   - env_var [optional] (string) name OS environment variable
    - choices [optional] (list of 2-tuple str) limit option values,
           second tuple element is a help description for value
    - help [optional] (string) description displayed by help command
