@@ -8,6 +8,8 @@ Changes
 =====================
 
  - Fix GH-#171 Passing environment variables to CmdAction
+ - cmdparse now support getting values from OS enviroment variables
+ - option `seek_file` control by ENV var `DOIT_SEEK_FILE`
 
 0.30.3 (*2017-02-20*)
 =====================
